--- a/notebooks/drug-indications.ipynb
+++ b/notebooks/drug-indications.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "14966e94",
+   "id": "db889ade",
    "metadata": {},
    "source": [
     "# Working with Drug Indications\n",
@@ -13,22 +13,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "df80b37c",
+   "id": "1ee9de80",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import time\n",
     "\n",
+    "import pandas as pd\n",
     "from IPython.display import Markdown\n",
     "\n",
-    "from chembl_downloader import queries, query, latest"
+    "from chembl_downloader import queries, query, latest, get_date"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e1c9b2b9",
+   "id": "9a2fd78d",
    "metadata": {},
    "outputs": [
     {
@@ -46,14 +47,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c66d2f88",
+   "id": "a9e2ec2b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Oct 28 10:51:46 2022\n"
+      "Fri Oct 28 11:24:40 2022\n"
      ]
     }
    ],
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d475ed2",
+   "id": "1c109d0f",
    "metadata": {},
    "source": [
     "## Building a SQL Query\n",
@@ -76,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2016d9a4",
+   "id": "621a2286",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c513264",
+   "id": "dc7ea247",
    "metadata": {},
    "source": [
     "## Running the SQL Query\n",
@@ -122,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f7fba23f",
+   "id": "e000559e",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "593b34c7",
+   "id": "517a08e9",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 2 µs, sys: 1 µs, total: 3 µs\n",
-      "Wall time: 9.06 µs\n"
+      "Wall time: 7.87 µs\n"
      ]
     }
    ],
@@ -162,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2d2ee255",
+   "id": "f2687b93",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6504d914",
+   "id": "90d015ec",
    "metadata": {},
    "source": [
     "## Comparison\n",
@@ -387,8 +388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "501800aa",
+   "execution_count": 8,
+   "id": "273be786",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +397,8 @@
      "output_type": "stream",
      "text": [
       "getting version 31\n",
-      "getting version 30\n"
+      "getting version 30\n",
+      "getting version 29\n"
      ]
     }
    ],
@@ -406,22 +408,97 @@
     "    version = str(version)\n",
     "    print(f\"getting version {version}\")\n",
     "    df = query(queries.DRUG_INDICATIONS_SQL, version=version)\n",
-    "    rows.append((\n",
-    "        version, \n",
-    "        len(df.index), \n",
-    "        len(df[\"chembl_id\"].unique()),\n",
-    "        len(df[\"mesh_id\"].unique()),\n",
-    "    ))"
+    "    rows.append(\n",
+    "        (\n",
+    "            version,\n",
+    "            get_date(version),\n",
+    "            len(df.index),\n",
+    "            len(df[\"chembl_id\"].unique()),\n",
+    "            len(df[\"mesh_id\"].unique()),\n",
+    "        )\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9330f697",
+   "execution_count": 9,
+   "id": "e86d42b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>version</th>\n",
+       "      <th>date</th>\n",
+       "      <th>associations</th>\n",
+       "      <th>unique_molecules</th>\n",
+       "      <th>unique_indications</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>31</td>\n",
+       "      <td>2022-07-12</td>\n",
+       "      <td>48816</td>\n",
+       "      <td>8074</td>\n",
+       "      <td>1888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30</td>\n",
+       "      <td>2022-02-22</td>\n",
+       "      <td>48816</td>\n",
+       "      <td>8074</td>\n",
+       "      <td>1888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29</td>\n",
+       "      <td>2021-07-01</td>\n",
+       "      <td>45902</td>\n",
+       "      <td>7792</td>\n",
+       "      <td>1781</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  version        date  associations  unique_molecules  unique_indications\n",
+       "0      31  2022-07-12         48816              8074                1888\n",
+       "1      30  2022-02-22         48816              8074                1888\n",
+       "2      29  2021-07-01         45902              7792                1781"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "counts_df = pd.DataFrame(rows, columns=[\"version\", \"associations\", \"unique_molecules\", \"unique_indications\"])\n",
+    "counts_df = pd.DataFrame(\n",
+    "    rows,\n",
+    "    columns=[\"version\", \"date\", \"associations\", \"unique_molecules\", \"unique_indications\"],\n",
+    ")\n",
     "counts_df"
    ]
   }
