--- a/notebooks/drug-indications.ipynb
+++ b/notebooks/drug-indications.ipynb
@@ -21,6 +21,7 @@
     "import time\n",
     "\n",
     "import pandas as pd\n",
+    "from tqdm.auto import tqdm\n",
     "from IPython.display import Markdown\n",
     "\n",
     "from chembl_downloader import queries, query, latest, get_date"
@@ -54,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Oct 28 11:24:40 2022\n"
+      "Fri Oct 28 11:55:25 2022\n"
      ]
     }
    ],
@@ -151,7 +152,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 2 µs, sys: 1 µs, total: 3 µs\n",
-      "Wall time: 7.87 µs\n"
+      "Wall time: 6.91 µs\n"
      ]
     }
    ],
@@ -383,7 +384,7 @@
    "source": [
     "## Comparison\n",
     "\n",
-    "We'll take the query of the drug indications to the next level by comparing results across ChEMBL versions."
+    "We'll take the query of the drug indications to the next level by comparing results across ChEMBL versions. We chose a minimum version of 26 to show a bit of variety, but not eat up too much disk space, since each version is around 20-25GB."
    ]
   },
   {
@@ -393,20 +394,30 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "getting version 31\n",
-      "getting version 30\n",
-      "getting version 29\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/6 [00:00<?, ?version/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "rows = []\n",
-    "for version in reversed(range(29, int(latest_version) + 1)):\n",
+    "it = tqdm(\n",
+    "    list(reversed(range(26, int(latest_version) + 1))),\n",
+    "    unit=\"version\",\n",
+    "    leave=False,\n",
+    ")\n",
+    "for version in it:\n",
     "    version = str(version)\n",
-    "    print(f\"getting version {version}\")\n",
+    "    it.set_postfix(version=version)\n",
     "    df = query(queries.DRUG_INDICATIONS_SQL, version=version)\n",
     "    rows.append(\n",
     "        (\n",
@@ -478,6 +489,30 @@
        "      <td>7792</td>\n",
        "      <td>1781</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>28</td>\n",
+       "      <td>2021-01-15</td>\n",
+       "      <td>42988</td>\n",
+       "      <td>7446</td>\n",
+       "      <td>1730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27</td>\n",
+       "      <td>2020-05-18</td>\n",
+       "      <td>37259</td>\n",
+       "      <td>6700</td>\n",
+       "      <td>1523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>26</td>\n",
+       "      <td>2020-02-14</td>\n",
+       "      <td>37259</td>\n",
+       "      <td>6700</td>\n",
+       "      <td>1523</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -486,7 +521,10 @@
        "  version        date  associations  unique_molecules  unique_indications\n",
        "0      31  2022-07-12         48816              8074                1888\n",
        "1      30  2022-02-22         48816              8074                1888\n",
-       "2      29  2021-07-01         45902              7792                1781"
+       "2      29  2021-07-01         45902              7792                1781\n",
+       "3      28  2021-01-15         42988              7446                1730\n",
+       "4      27  2020-05-18         37259              6700                1523\n",
+       "5      26  2020-02-14         37259              6700                1523"
       ]
      },
      "execution_count": 9,
