--- a/notebooks/refresh-static-data.ipynb
+++ b/notebooks/refresh-static-data.ipynb
@@ -820,7 +820,7 @@
    "source": [
     "## Summary of Value Added\n",
     "\n",
-    "The following plots a histogram of pChEMBL values of the two datasets It's obvious that the newer version of ChEMBL provides a greater variety of pChEMBL scores as well as a total larger number of compounds."
+    "The following plots a histogram of pChEMBL values of the two datasets The newer version of ChEMBL provides a greater variety of pChEMBL scores as well as a total larger number of compounds."
    ]
   },
   {
