--- a/notebooks/refresh-static-data.ipynb
+++ b/notebooks/refresh-static-data.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "Pat Walters, the writer of the cheminformatics blog [Practical Cheminformatics](https://practicalcheminformatics.blogspot.com), has a [repository](https://github.com/PatWalters/datafiles) for datasets used in his blog posts. As several datasets are based on ChEMBL, there is a benefit to building reproducible workflows for re-generating them using `chembl-downloader`.\n",
     "\n",
-    "In this notebook, we'll look at a dataset of the small molecule inhibitors of [5-lipoxygenase activating protein (CHEMBL4550)](https://bioregistry.io/chembl:CHEMBL4550). It's available at as a `*.smi` file, which is a CSV file with SMILES strings in the first column arbitarary, application-specific content. In this case, the remaining two columns are a ChEMBL compound identifier and a [pChEMBL](https://chembl.gitbook.io/chembl-interface-documentation/frequently-asked-questions/chembl-data-questions#what-is-pchembl) value. The data for this example can be found at [https://github.com/PatWalters/datafiles/raw/main/CHEMBL4550.smi](https://github.com/PatWalters/datafiles/raw/main/CHEMBL4550.smi)."
+    "In this notebook, we'll look at a dataset of the small molecule inhibitors of [5-lipoxygenase activating protein (CHEMBL4550)](https://bioregistry.io/chembl:CHEMBL4550). It's available at as a `*.smi` file, which is a CSV file with SMILES strings in the first column and arbitarary, application-specific content in the remaining columns. In this case, the remaining two columns are a ChEMBL compound identifier and a [pChEMBL](https://chembl.gitbook.io/chembl-interface-documentation/frequently-asked-questions/chembl-data-questions#what-is-pchembl) value. The data for this example can be found at [https://github.com/PatWalters/datafiles/raw/main/CHEMBL4550.smi](https://github.com/PatWalters/datafiles/raw/main/CHEMBL4550.smi)."
    ]
   },
   {
@@ -427,9 +427,11 @@
     }
    ],
    "source": [
-    "df = chembl_downloader.contrib.get_target_smi_df(\"CHEMBL4550\", aggregate=None).sort_values(\n",
-    "    \"molecule_chembl_id\"\n",
-    ")\n",
+    "# note that if aggregate=None isn't explicitly written,\n",
+    "# this defaults to the arithmetic mean\n",
+    "df = chembl_downloader.contrib.get_target_smi_df(\n",
+    "    \"CHEMBL4550\", version=latest_version, aggregate=None\n",
+    ").sort_values(\"molecule_chembl_id\")\n",
     "df"
    ]
   },
