--- a/notebooks/cortes-ciriano-refresh.ipynb
+++ b/notebooks/cortes-ciriano-refresh.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "8600beec",
+   "execution_count": 25,
+   "id": "1d14fba6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import time\n",
     "import chembl_downloader\n",
     "from chembl_downloader.contrib import get_target_smi_df\n",
     "import pandas as pd\n",
@@ -17,8 +19,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ace3edc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.10.8 (main, Oct 13 2022, 10:17:43) [Clang 14.0.0 (clang-1400.0.29.102)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2d7a2f09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sun Oct 30 21:05:33 2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(time.asctime())"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "b8b608fb",
+   "id": "44eaec04",
    "metadata": {},
    "source": [
     "Table 1 from Cortés-Ciriano and Bender's [*Deep Confidence: A Computationally Efficient Framework for Calculating Reliable Prediction Errors for Deep Neural Networks*](https://pubs.acs.org/doi/10.1021/acs.jcim.8b00542)\n",
@@ -29,11 +67,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1018091c",
+   "id": "2d3b3eb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mappings =  [\n",
+    "mappings = [\n",
     "    (\"A2a\", \"CHEMBL1867\", 203),\n",
     "    (\"ABL1\", \"CHEMBL1862\", 773),\n",
     "    (\"Acetylcholinesterase\", \"CHEMBL220\", 3159),\n",
@@ -43,7 +81,7 @@
     "    (\"Carbonic\", \"CHEMBL205\", 603),\n",
     "    (\"Caspase\", \"CHEMBL2334\", 1606),\n",
     "    (\"Coagulation\", \"CHEMBL204\", 1700),\n",
-    "    (\"COX-1\",\"CHEMBL221\", 1343),\n",
+    "    (\"COX-1\", \"CHEMBL221\", 1343),\n",
     "    (\"COX-2\", \"CHEMBL230\", 2855),\n",
     "    (\"Dihydrofolate\", \"CHEMBL202\", 584),\n",
     "    (\"Dopamine\", \"CHEMBL217\", 479),\n",
@@ -63,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9200895c",
+   "id": "1b708868",
    "metadata": {},
    "source": [
     "## Load Old Data"
@@ -72,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5a30d619",
+   "id": "b01be7f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6d512f53",
+   "id": "b037b7bd",
    "metadata": {},
    "outputs": [
     {
@@ -457,14 +495,19 @@
     "                    unit_scale=True,\n",
     "                )\n",
     "            ]\n",
-    "        old_df = old_dfs[target_chembl_id] = pd.DataFrame(rows, columns=[\n",
-    "            \"smiles\", \"chembl_id\", \"pchembl\",\n",
-    "        ])"
+    "        old_df = old_dfs[target_chembl_id] = pd.DataFrame(\n",
+    "            rows,\n",
+    "            columns=[\n",
+    "                \"smiles\",\n",
+    "                \"chembl_id\",\n",
+    "                \"pchembl\",\n",
+    "            ],\n",
+    "        )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "60db88c3",
+   "id": "70678ff3",
    "metadata": {},
    "source": [
     "## Refresh Data"
@@ -473,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4024f18d",
+   "id": "d4ca9e39",
    "metadata": {},
    "outputs": [
     {
@@ -754,29 +797,18 @@
     "rows = []\n",
     "for abbr, target_chembl_id, old in tqdm(mappings):\n",
     "    df = new_dfs[target_chembl_id] = get_target_smi_df(\n",
-    "        target_chembl_id, version=version, aggregate=\"mean\",\n",
+    "        target_chembl_id,\n",
+    "        version=version,\n",
+    "        aggregate=\"mean\",\n",
     "    )\n",
     "    new = len(df.index)\n",
-    "    rows.append((abbr, target_chembl_id, old, new, new-old))\n",
-    "    \n",
+    "    rows.append((abbr, target_chembl_id, old, new, new - old))\n",
+    "\n",
     "summary_df = pd.DataFrame(\n",
-    "    rows, \n",
-    "    columns=[\n",
-    "        \"abbrevation\", \"target_chembl_id\",\n",
-    "        \"old_count\", \"new_count\", \"delta\"\n",
-    "    ],\n",
+    "    rows,\n",
+    "    columns=[\"abbrevation\", \"target_chembl_id\", \"old_count\", \"new_count\", \"delta\"],\n",
     ")\n",
     "summary_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f43f9ff3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for"
    ]
   }
  ],
