Add stub for checking chebi reverse mappings

--- a/notebooks/chebi-mappings.ipynb
+++ b/notebooks/chebi-mappings.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "cfa741d8",
    "metadata": {
     "scrolled": true
@@ -27,6 +27,7 @@
     "import gilda.grounder\n",
     "import gilda.term\n",
     "import pandas as pd\n",
+    "import pystow\n",
     "from biomappings.gilda_utils import iter_prediction_tuples\n",
     "from gilda.process import normalize\n",
     "from tqdm.auto import tqdm\n",
@@ -63,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Oct 28 15:16:09 2022\n"
+      "Thu Nov  3 12:53:35 2022\n"
      ]
     }
    ],
@@ -114,7 +115,7 @@
        "    chembl_id,\n",
        "    pref_name\n",
        "FROM MOLECULE_DICTIONARY\n",
-       "WHERE \n",
+       "WHERE\n",
        "    chebi_par_id IS NULL\n",
        "    AND pref_name IS NOT NULL\n",
        "```"
@@ -150,8 +151,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2 µs, sys: 1e+03 ns, total: 3 µs\n",
-      "Wall time: 5.25 µs\n"
+      "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
+      "Wall time: 6.91 µs\n"
      ]
     }
    ],
@@ -280,6 +281,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3cfd26a2",
+   "metadata": {},
+   "source": [
+    "## What's Already in ChEBI\n",
+    "\n",
+    "ChEBI also maintains its own mappings to ChEMBL - investigate if there's anything available there that is not already available in ChEMBL before moving on to propose new mappings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "850f0b0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pystow' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m chebi_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://ftp.ebi.ac.uk/pub/databases/chebi/Flat_file_tab_delimited/reference.tsv.gz\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m chebi_df \u001b[38;5;241m=\u001b[39m \u001b[43mpystow\u001b[49m\u001b[38;5;241m.\u001b[39mensure_df(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbio\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchebi\u001b[39m\u001b[38;5;124m\"\u001b[39m, url\u001b[38;5;241m=\u001b[39mchebi_url)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pystow' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "chebi_url = \"https://ftp.ebi.ac.uk/pub/databases/chebi/Flat_file_tab_delimited/reference.tsv.gz\"\n",
+    "chebi_df = pystow.ensure_df(\"bio\", \"chebi\", url=chebi_url)\n",
+    "\n",
+    "# TODO slice to only have chembl sources then remove unnecessary columns\n",
+    "\n",
+    "#: keys are chembl IDs, values are chebi IDs\n",
+    "chebi_mappings = ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0387752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chebi_idx = df.chembl_id.isin(set(chebi_mappings))\n",
+    "\n",
+    "print(f\"there are {chebi_idx.sum():,}/{len(df.index):,} ({chebi_idx.sum()/len(df.index):.2%}) extra mappings from ChEBI\")\n",
+    "\n",
+    "df = df[~chebi_idx]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2c8748be",
    "metadata": {},
    "source": [
@@ -290,25 +343,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d87f8e43",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c7a8425031c4d3395beca67e8f7b685",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0.00/39.2k [00:00<?, ?term/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "terms = [\n",
     "    gilda.term.Term(\n",
@@ -343,32 +381,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "737427eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: [2022-10-28 15:16:13] bioversions.sources.ols - [ypo] Missing information in OLS\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baa3d7e4f93d4b70aefc7369d25050c3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "[chebi] gilda tuples:   0%|          | 0.00/163k [00:00<?, ?name/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "prediction_tuples = list(\n",
     "    iter_prediction_tuples(\n",
@@ -381,18 +397,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b01f8e7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Got 4,720 predictions\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Got {len(prediction_tuples):,} predictions\")"
    ]
@@ -409,240 +417,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2dd1fc6a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>source_prefix</th>\n",
-       "      <th>source_id</th>\n",
-       "      <th>source_name</th>\n",
-       "      <th>relation</th>\n",
-       "      <th>target_prefix</th>\n",
-       "      <th>target_identifier</th>\n",
-       "      <th>target_name</th>\n",
-       "      <th>type</th>\n",
-       "      <th>confidence</th>\n",
-       "      <th>source</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4377</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:80180</td>\n",
-       "      <td>Indolicidin</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL2251917</td>\n",
-       "      <td>Indolicidin</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.777778</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3524</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:40701</td>\n",
-       "      <td>ALRESTATIN</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL63055</td>\n",
-       "      <td>ALRESTATIN</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.777778</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1765</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:167900</td>\n",
-       "      <td>PJ34</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL3233481</td>\n",
-       "      <td>PJ34</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.777778</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1766</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:167900</td>\n",
-       "      <td>PJ34</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL372303</td>\n",
-       "      <td>PJ34</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.777778</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3520</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:40287</td>\n",
-       "      <td>7-NITROINDAZOLE</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL247378</td>\n",
-       "      <td>7-NITROINDAZOLE</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.777778</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4662</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:9423</td>\n",
-       "      <td>Technetium tc 99m sestamibi</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL4594241</td>\n",
-       "      <td>TECHNETIUM TC 99M SESTAMIBI</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.723974</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3310</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:32187</td>\n",
-       "      <td>Technetium Tc 99m succimer</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL1200797</td>\n",
-       "      <td>TECHNETIUM TC 99M SUCCIMER</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.723974</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3774</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:5937</td>\n",
-       "      <td>Interferon alfa-2a</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL2108508</td>\n",
-       "      <td>INTERFERON ALFA-2A</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.723974</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3775</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:5938</td>\n",
-       "      <td>Interferon beta-1b</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL1201563</td>\n",
-       "      <td>INTERFERON BETA-1B</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.723974</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3776</th>\n",
-       "      <td>chebi</td>\n",
-       "      <td>CHEBI:5939</td>\n",
-       "      <td>Interferon gamma-1b</td>\n",
-       "      <td>skos:exactMatch</td>\n",
-       "      <td>chembl.compound</td>\n",
-       "      <td>CHEMBL1201564</td>\n",
-       "      <td>INTERFERON GAMMA-1B</td>\n",
-       "      <td>lexical</td>\n",
-       "      <td>0.723974</td>\n",
-       "      <td>notebook</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4720 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     source_prefix     source_id                  source_name  \\\n",
-       "4377         chebi   CHEBI:80180                  Indolicidin   \n",
-       "3524         chebi   CHEBI:40701                   ALRESTATIN   \n",
-       "1765         chebi  CHEBI:167900                         PJ34   \n",
-       "1766         chebi  CHEBI:167900                         PJ34   \n",
-       "3520         chebi   CHEBI:40287              7-NITROINDAZOLE   \n",
-       "...            ...           ...                          ...   \n",
-       "4662         chebi    CHEBI:9423  Technetium tc 99m sestamibi   \n",
-       "3310         chebi   CHEBI:32187   Technetium Tc 99m succimer   \n",
-       "3774         chebi    CHEBI:5937           Interferon alfa-2a   \n",
-       "3775         chebi    CHEBI:5938           Interferon beta-1b   \n",
-       "3776         chebi    CHEBI:5939          Interferon gamma-1b   \n",
-       "\n",
-       "             relation    target_prefix target_identifier  \\\n",
-       "4377  skos:exactMatch  chembl.compound     CHEMBL2251917   \n",
-       "3524  skos:exactMatch  chembl.compound       CHEMBL63055   \n",
-       "1765  skos:exactMatch  chembl.compound     CHEMBL3233481   \n",
-       "1766  skos:exactMatch  chembl.compound      CHEMBL372303   \n",
-       "3520  skos:exactMatch  chembl.compound      CHEMBL247378   \n",
-       "...               ...              ...               ...   \n",
-       "4662  skos:exactMatch  chembl.compound     CHEMBL4594241   \n",
-       "3310  skos:exactMatch  chembl.compound     CHEMBL1200797   \n",
-       "3774  skos:exactMatch  chembl.compound     CHEMBL2108508   \n",
-       "3775  skos:exactMatch  chembl.compound     CHEMBL1201563   \n",
-       "3776  skos:exactMatch  chembl.compound     CHEMBL1201564   \n",
-       "\n",
-       "                      target_name     type  confidence    source  \n",
-       "4377                  Indolicidin  lexical    0.777778  notebook  \n",
-       "3524                   ALRESTATIN  lexical    0.777778  notebook  \n",
-       "1765                         PJ34  lexical    0.777778  notebook  \n",
-       "1766                         PJ34  lexical    0.777778  notebook  \n",
-       "3520              7-NITROINDAZOLE  lexical    0.777778  notebook  \n",
-       "...                           ...      ...         ...       ...  \n",
-       "4662  TECHNETIUM TC 99M SESTAMIBI  lexical    0.723974  notebook  \n",
-       "3310   TECHNETIUM TC 99M SUCCIMER  lexical    0.723974  notebook  \n",
-       "3774           INTERFERON ALFA-2A  lexical    0.723974  notebook  \n",
-       "3775           INTERFERON BETA-1B  lexical    0.723974  notebook  \n",
-       "3776          INTERFERON GAMMA-1B  lexical    0.723974  notebook  \n",
-       "\n",
-       "[4720 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictions_df = pd.DataFrame(prediction_tuples).sort_values(\"confidence\", ascending=False)\n",
     "predictions_df"
