--- a/notebooks/chebi-mappings.ipynb
+++ b/notebooks/chebi-mappings.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cfd26a2",
+   "id": "4d1304a8",
    "metadata": {},
    "source": [
     "## What's Already in ChEBI\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "850f0b0f",
+   "id": "a0dfc359",
    "metadata": {},
    "outputs": [
     {
@@ -320,13 +320,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0387752",
+   "id": "5cc8e295",
    "metadata": {},
    "outputs": [],
    "source": [
     "chebi_idx = df.chembl_id.isin(set(chebi_mappings))\n",
     "\n",
-    "print(f\"there are {chebi_idx.sum():,}/{len(df.index):,} ({chebi_idx.sum()/len(df.index):.2%}) extra mappings from ChEBI\")\n",
+    "print(\n",
+    "    f\"there are {chebi_idx.sum():,}/{len(df.index):,} ({chebi_idx.sum()/len(df.index):.2%}) \"\n",
+    "    \" extra mappings from ChEBI\"\n",
+    ")\n",
     "\n",
     "df = df[~chebi_idx]"
    ]
